--- a/employee-manager/.settings/org.eclipse.core.resources.prefs
+++ b/employee-manager/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,7 @@
 eclipse.preferences.version=1
 encoding//src/main/java=UTF-8
 encoding//src/main/resources=UTF-8
+encoding//src/main/webapp/WEB-INF/view/basefragments/footer.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/view/basefragments/nav.jsp=UTF-8
+encoding//src/main/webapp/WEB-INF/view/bodyfragments/home.jsp=UTF-8
 encoding/<project>=UTF-8
