--- a/employee-manager/.project
+++ b/employee-manager/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>employee-manager</name>
+	<name>employee-manager-front-end</name>
 	<comment></comment>
 	<projects>
 	</projects>
